Update readme with new instructions