@@ -1,101 +1,69 @@
-# Openrouteservice
+# Openrouteservice for EIFFEL Analytics
+Fork of https://github.com/giscience/openrouteservice
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[master](https://github.com/GIScience/openrouteservice)&nbsp;&nbsp;&nbsp;&nbsp; [development](https://github.com/GIScience/openrouteservice/tree/development)
+This repository is prepared with settings for our own server. Our ORS server runs in a docker instance on the acdevelop remote desktop: `10.1.1.48:8080/ors` only available from EIFFEL Arnhem.
 
-[![Build Status](https://travis-ci.org/GIScience/openrouteservice.svg?branch=master)](https://travis-ci.org/GIScience/openrouteservice) [![Build Status](https://travis-ci.org/GIScience/openrouteservice.svg?branch=development)](https://travis-ci.org/GIScience/openrouteservice)
+## How to use openrouteservice
+Use it as you would use the service with your API key:
 
-The **openrouteservice API** provides global spatial services by consuming user-generated and collaboratively collected free geographic data directly from [OpenStreetMap](http://www.openstreetmap.org). It is highly customizable, performant and written in Java.
+* POST or GET requests: https://openrouteservice.org/dev/#/api-docs
+* Python API: https://github.com/GIScience/openrouteservice-py
+    * Make sure you have an up-to-date install of the Python package openrouteservice.
+* JS and R APIs are also avialable. See the [official website](https://openrouteservice.org/).
 
-The following services are available via a HTTP interface served by Tomcat.
-- **Directions** - Returns a route between two or more locations for a selected profile with customizable additional settings and instructions.
-- **Isochrones** - Obtains areas of reachability from given locations.
-- **Matrix** - Computes one-to-many, many-to-one or many-to-many routes for any mode of transport provided by openrouteservice.
+## How to start the container for the first time
+Clone this repository to your computer.
 
-To play around with openrouteservice you may use our [demonstration server](https://maps.openrouteservice.org) which comes with both the backend and a [frontend](https://github.com/GIScience/openrouteservice-app). Or simply sign up for an [API key](https://openrouteservice.org) and fire your requests against the API directly.
+The (large) OSM file is not included in the repo. So download netherlands-latest.osm.pbf from https://download.geofabrik.de/europe/netherlands.html and place it in the docker/data/ folder.
 
-Please note that openrouteservice uses a forked and edited version of [graphhopper 0.10](https://github.com/GIScience/graphhopper) which can be found [here](https://github.com/GIScience/graphhopper).
+Open a terminal or PowerShell and run the following commands:
+```
+cd docker
+docker-compose up -d
+```
+Which will build the image and starts it in detached mode. This will run  `ors-app` in the background and will return the prompt. When the image is (re)build, openrouteservice needs to (re)build its graphs. This may take 10+ minutes.
 
-[![ors client accessibility](https://user-images.githubusercontent.com/23240110/30385487-9eac96b8-98a7-11e7-9357-afd4df8fccdf.png)](https://openrouteservice.org/reach)
+### Follow the progress
+Use `docker ps` to see the running docker processes.
 
-**Note**
+Use `docker stats` to see CPU and memory usage of the running containers.
 
-- Our geocoding API is a separate service running the stack built around [**Pelias**](https://github.com/pelias/pelias).
-- Our locations/API is another service which we have coined **openpoiservice** which can be found [here](https://github.com/GIScience/openpoiservice).
+Use `docker logs --follow ors-app` to follow the log files of `ors-app`. To stop following the logs, press `Ctrl`+`C`, maybe press twice on Windows.
 
+### Tests
+See `localhost:8080/ors/health` in the browser (or `10.1.1.48:8080/ors/health` when not on acdevelop) to check if ORS is ready to accept requests. 
 
-## Changelog/latest changes
+Go to `localhost:8080/ors/routes?profile=driving-car&coordinates=5.8987,51.9851|4.8994,52.3791` to request the route from Arnhem to Amsterdam. If the browser returns a JSON with the navigation instructions you have succesfully set up openrouteservice.
 
-[Openrouteservice CHANGELOG](https://github.com/GIScience/openrouteservice/blob/master/CHANGELOG.md)
+## How to change the OSM file
+I'm not exactly sure how to do this, but it should be something like this:
+1. Shutdown `ors-app` with `docker-compose down`
+1. Put the OSM file in the data folder
+1. Change the parameter OSM_FILE in docker-compose.yml
+1. Remove the folders graphs and elevation_cache
+1. Run `docker-compose up -d --build` to rebuild the image with the new parameters
 
-## Contribute
+## How to change app.config
+Again, I'm not entirely sure how to do this, but this works:
+1. Shutdown `ors-app` with `docker-compose down`
+1. Make changes in app.config
+1. Run `docker-compose up -d --build` to rebuild the image with the new config
 
-We appreciate any kind of contribution - bug reports, new feature suggestion or improving our translations are greatly appreciated. Feel free to create an [issue](https://github.com/GIScience/openrouteservice/issues) and label it accordingly. If your issue regards the openrouteservice web-app please use the [corresponding repository](https://github.com/GIScience/openrouteservice-app/issues).
-
-If you want to contribute your improvements, please follow the steps outlined in [our CONTRIBUTION guidelines](./CONTRIBUTE.md)
-
-
-## Installation
-
-We suggest using docker to install and launch openrouteservice backend. In short, run the following command under the source code tree will get everything done (for this please
-clone the repository, running docker via the archive is currently not supported).
-
-```bash
-cd docker && docker-compose up
+## Stop and start the container
+Just stopping and starting the container doesn't require a rebuild. Use:
+```
+docker stop ors-app
+docker start ors-app
 ```
 
-For more details, check the [docker installation guide](docker/README.md).
+## Original README
+See [the original README](https://github.com/GIScience/openrouteservice/blob/master/README.md) from GIScience for more info.
 
-If you need to install without Docker, on an Ubuntu 16.04 system (also generally works with newer Ubuntu versions) you can use the following steps:
+## For developers
+How to sync this fork with the upstream repository of GIScience: https://help.github.com/en/articles/syncing-a-fork
 
-  1. Clone the openrouteservice repository to your machine.
-  2. Make sure that you have java 1.8 set as the default Java environment.
-  3. Make sure that you have Maven installed.
-  4. Download/create an OpenStreetMap pbf file on the machine.
-  5. Copy the `openrouteservice/WebContent/WEB-INF/app.config.sample` file to the same location but renaming it to `app.config`.
-  6. Update the `app.config` file to reflect the various settings, profiles you want to have running, and the locations of various files, in particular the source location of the OSM file that will be used and additional files required for extended storages. You should make sure that these folders/files are accessible by the service, for example by using the `sudo chmod -R 777 [path to folder]` command.
-  7. From within the `openrouteservice` folder (containing the pom file and the src folder, amongst others) run the command `mvn package`. This will build the openrouteservice ready for tomcat deployment.
+How to enter the container: `docker exec -it ors-app bash`. You'll find the actually loaded app.config in /usr/local/tomcat/webapps/ors/WEB-INF/classes/app.config. The graphs are mounted as volumes so you can access them from outside the container in the folder docker/graphs/.
 
-After you have packaged openrouteservice, there are two options for running it. One is to run the `mvn tomcat7:run` command which triggers a self contained Tomcat instance, but this is more restrictive in terms of settings for Tomcat. The other is to install and run Tomcat 8 as described next:
+Remove all images: `docker image rm $(docker image ls -a)`
 
-  1. Install Tomcat 8 using `sudo apt-get install tomcat8`.
-  2. If you want to use system settings (i.e. Java heap size) other than the default, then you need to add these to the `/usr/share/tomcat8/bin/setenv.sh` file. If the file is not present, then you can create it. The settings generally used on our servers are similar to:
-
-```bash
-JAVA_OPTS="-server -XX:TargetSurvivorRatio=75 -XX:SurvivorRatio=64 -XX:MaxTenuringThreshold=3 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:ParallelGCThreads=4 -Xms114g -Xmx114g -XX:MaxMetaspaceSize=50m"
-CATALINA_OPTS="(here we set settings for JMX monitoring)"
-```
-
-  3. If you add these new settings to the `setenv.sh` file, then you need to restart Tomcat for these to take effect using `sudo systemctl restart tomcat8.service`.
-  4. To get openrouteservice up and running, copy the `openrouteservice-xxx.war` file found in the `openrouteservice/target` folder to the Tomcat webapps folder. For example
-
-```bash
-sudo cp ~/openrouteservice/openroutesrvice/target/openroutservice-4.7.0.war /var/lib/tomcat8/webapps/ors.war
-```
-
-  5. Tomcat should now automatically detect the new WAR file and deploy the service. Depending on profiles and size of the OSM data, this can take some time until openrouteservice has built graphs and is ready for generating routes. You can check if it is ready by accessing `http://localhost:8080/ors/health` (the port and URL may be different if you have installed Tomcat differently than above). If you get a `status: ready` message, you are good to go in creating routes.
-
-There are numerous settings within the `app.config` which are highly dependent on your individual circumstances, but many of these are documented. As a guide however you can look at the `app.config.sample` file in the `docker/conf` folder. If you run into issues relating to out of memory or similar, then you will need to adjust java/tomcat settings accordingly.
-
-## Usage
-
-Openrouteservice offers a set of endpoints for different spatial purposes. They are served with the help of [Tomcat in a java servlet container](https://github.com/GIScience/openrouteservice/blob/master/openrouteservice/WebContent/WEB-INF/web.xml). By default you will be able to query the services with these addresses:
-
-- `http://localhost:8080/name_of_war_archive/routes`
-- `http://localhost:8080/name_of_war_archive/isochrones`
-- `http://localhost:8080/name_of_war_archive/matrix`
-
-## API Documentation
-
-For an easy and interactive way to test the api, visit our documentation at [openrouteservice.org](https://openrouteservice.org).
-After obtaining your key you can try out the different endpoints instantly and start firing requests.
-
-
-## Questions
-
-For questions please use our [community forum](https://ask.openrouteservice.org).
-
-## Translations
-
-If you notice any thing wrong with translations, or you want to add a new language to the ORS instructions, please add/edit files in the src/main/resources/locales folder. You can use the ors_en.resources file as a template as to what information needs to be present.
-As a guide, for each instruction there are two formats - one where there is a named place (i.e. 47 Berlinerstraße) and one without. It is important to keep the {way_name} tag in the text, but it should be moved to the correct location.
-To show ORS what language is being used, you should alter the name of the file to include the ISO identifier (i.e. for Austrian German the filename would be ors_de_AT.resources).
+Remove all images with "none" in the name: `docker images -a | grep "none" | awk '{print $3}' | xargs docker rmi`
